# kalosm-chat

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  tailwind.css
assets/: tailwind.css
public/: loading.css  tailwind.css
src/: main.rs
src/components/: avatar.rs  chat_controls.rs  message.rs  mod.rs  text_input.rs
src/data/: mock_image.rs  mod.rs
src/views/: home.rs  mod.rs
