[package]
name = "kalosm-chat"
version = "0.1.0"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
edition = "2021"

[dependencies]
comrak = "0.40.0"
dioxus = { version = "=0.7.0-alpha.3", features = ["desktop", "router"] }
reqwest = "0.12.12"

# Only include native feature for iOS and macOS
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
dioxus = { version = "=0.7.0-alpha.3", features = ["desktop", "router", "native"] }
kalosm = { version = "0.4.0", features = ["language","metal"] }

[features]
 metal = ["kalosm/metal"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
